Fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
   font-family: Roboto;
   background-color: #f3faf8;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
